[gd_scene load_steps=4 format=3 uid="uid://bk7g63u2340e4"]

[ext_resource type="Texture2D" uid="uid://cj16q0w6djmhd" path="res://assets/Space Ship.png" id="1_7p1mj"]
[ext_resource type="Script" uid="uid://bhjussuug5xor" path="res://scripts/enemy.gd" id="1_md0e3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_md0e3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_7p1mj")
}],
"loop": true,
"name": &"Default",
"speed": 5.0
}]

[node name="enemy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_md0e3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_md0e3")
animation = &"Default"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
rect = Rect2(-16, -14, 32, 30)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -4, 3, 2, 10, 2, 3, 5, 5, 12, 0, 7, -5, 12, -3, 5, -10, 2, -3, 2)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
